--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,17 +1,18 @@
+name: Docs
+
 on:
   push:
     branches:
-      - "master"
+      - master
     paths:
-      - ".moonwave/**"
-      - "docs/**"
-      - "model/**"
-      - "src/**"
-      - "moonwave.toml"
+      - .moonwave/**
+      - docs/**
+      - model/**
+      - src/**
+      - moonwave.toml
 
 jobs:
-  docs:
-    name: Publish docs to GitHub Pages
+  publish:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
